# data_pipeline_sqs_s3_athena

./: main.py  pyproject.toml  test.csv
src/: sqs.py
